--- a/index.html
+++ b/index.html
@@ -6,11 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iftakhar-port</title>
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>welcome to</h1>
+            <h1> <span class="orange-color">Iftakhar Ifti</span> World!!! </h1>
+            <br>
+            <h3>This is my simple portfolio</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel amet, soluta iure ab suscipit officiis! Sint
+                facere
+                praesentium itaque, sit tempora quasi dolore odio, expedita velit repudiandae magni odit saepe. Lorem
+                ipsum
+                dolor sit, amet consectetur adipisicing elit. Distinctio eum sint nulla libero repellendus doloremque
+                officiis
+                animi sequi itaque corporis.</p>
+            <a class="link-button" target="_blank" href="https://github.com/">hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
