--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
+
+    <container class="experience-area">
+        <h1>Experience</h1>
+        <div class="two-type-developer">
+            <div class="experience-item">
+                <h1>Full stalk web developer</h1>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consequatur? Dolore culpa minima
+                    in!
+                    Ab maxime modi sint quidem, accusantium unde non omnis, et nobis fugit ex laudantium dolore totam!
+                </h3>
+            </div>
+            <div class="experience-item">
+                <h1>Baby halh web developer</h1>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, consequatur? Dolore culpa minima
+                    in!
+                    Ab maxime modi sint quidem, accusantium unde non omnis, et nobis fugit ex laudantium dolore totam!
+                </h3>
+            </div>
+        </div>
+    </container>
 </body>
 
 </html>
